# Graph_MAGIC_Conv

./: .gitignore  README.md  dvc.yaml  environment.yaml  params.yaml  pyproject.toml
.github/workflows/: build_and_test.yml
aml_magic/src/: consts.py
aml_magic/src/models/: magic.py  metrics.py  training.py
aml_magic/src/stages/: prepare_data.py  summarize_results.py  train_and_test_models.py
aml_magic/src/utils/: configs.py
notebooks/: summarize_results.ipynb
stage_params/: gb_training.yaml  gnn_training.yaml  prepare_data.yaml
