[tool.poetry]
name = "antimoneylaundering-magic"
version = "0.1.0"
description = ""
authors = ["Filip Wójcik <filip.wojcik@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dvc = "^3.51.3"
pandas = "^2.2.2"
rootutils = "^1.0.7"
typer = "^0.12.3"
pydantic = "^2.8.2"
torch = {version = "^2.3.1", source = "torch_cuda"}
autoroot = "^1.0.0"
torch-geometric = "^2.5.3"
tqdm = "^4.66.4"
torcheval = "^0.0.7"
autorootcwd = "^1.0.0"
mlflow = "^2.14.3"
tensorboard = "^2.17.0"
lightgbm = "^4.4.0"
xgboost = "^2.1.0"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
pytorch-lightning = "^2.4.0"
pre-commit = "^3.8.0"


[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.2.4"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
ruff = "^0.5.4"

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
